--- a/modulo-4/kata4.ipynb
+++ b/modulo-4/kata4.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio 1: Transformar cadenas\n",
+    "# Modulo 4 - Katas\n",
+    "\n",
+    "## Ejercicio 1: Transformar cadenas\n",
     "\n",
     "En este ejercicio, usarás métodos de cadena para modificar el texto con hechos sobre la Luna y luego extraerás información para crear un breve resumen.  \n",
     "El texto con el que trabajarás es el siguiente:"
@@ -145,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio 2: Formateando Cadenas\n",
+    "## Ejercicio 2: Formateando Cadenas\n",
     "\n",
     "En este ejercicio, se utilizan variables que contienen datos clave sobre la gravedad en varias lunas y luego se utilizan para dar formato e imprimir la información.\n",
     "\n",
