--- a/modulo-5/kata5.ipynb
+++ b/modulo-5/kata5.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,15 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57900000\n",
-      "108200000\n"
+      "57900000 Km\n",
+      "108200000 Km\n"
      ]
     }
    ],
@@ -118,8 +118,8 @@
     "int_primerPlaneta = int(primer_Planeta)\n",
     "int_segundoPlaneta = int(segundo_Planeta)\n",
     "\n",
-    "print(int_primerPlaneta)\n",
-    "print(int_segundoPlaneta)"
+    "print(int_primerPlaneta, 'Km')\n",
+    "print(int_segundoPlaneta, 'Km')"
    ]
   },
   {
@@ -136,24 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50300000\n",
-      "31236300.0\n"
+      "50300000 Km\n",
+      "31236300.0 Millas\n"
      ]
     }
    ],
    "source": [
     "valorAbsoluto_distancia = int_segundoPlaneta - int_primerPlaneta\n",
-    "print(abs(valorAbsoluto_distancia))\n",
+    "print(abs(valorAbsoluto_distancia), 'Km')\n",
     "\n",
     "distancia_Millas = (abs(valorAbsoluto_distancia)) * 0.621\n",
-    "print(distancia_Millas)\n"
+    "print(distancia_Millas, 'Millas')\n"
    ]
   }
  ],
